Add initial configuration and dependencies for the SPF website
- Update .gitignore to exclude documentation and project status files
- Create .prettierrc for code formatting with Tailwind CSS support
- Add components.json for component configuration
- Update package.json and package-lock.json with new dependencies
- Enhance globals.css with new styles and variables
- Refactor layout.tsx to use new font imports
- Simplify page.tsx content
- Implement utility function in utils.ts for class name merging

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,11 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Agent
+# docs
+/docs
+
+# instructions
+GEMINI.md
+PROJECT_STATUS.md
