--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@remixicon/react": "^4.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.559.0",
     "motion": "^12.23.26",
     "next": "16.0.8",
